--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<h2 class='brand'>New post</h2>
+<%= render 'shared/title_format', title: 'Add New Post' %>
 
 <%= render 'shared/errors', obj: @post %>
 
