--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,9 @@
+
+<% header = link_to('All Posts', posts_path) + " &raquo; #{@category.name}".html_safe %>
+<%= render 'shared/title_format', title: header %>
+
 <p>
-<h2><%= @category.name %></h2>
+
  <%= pluralize( @category.posts.count, 'post') %> in this category
 </p>
 
