--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,23 +13,26 @@
 
   <div class='control-group' > 
     <%= f.label :description %>
-    <%= f.text_area :description, rows: 5 %>
+    <%= f.text_area :description, rows: 5, class: 'span6' %>
   </div>
 
 <div class='control-group'>
   <%#= f.label "Categories" %>
-  Categories
+  Categories:
+  <br /> 
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
-  <%= cb.label( class: "checkbox inline") 
-  (cb.check_box(class: "checkbox") + cb.text) %>
+    <span class='checkbox_span'>
+      <%= cb.label( class: "checkbox inline") 
+      (cb.check_box(class: "checkbox") + cb.text) %> 
+    </span>
   <% end %>
-
-
 </div>
 
+<br />
+<br />
 
-  <div class='action'>
+<div class='action'>
   <%= f.submit %>
-  </div>
+</div>
 
 <% end %>
