--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,18 @@
-<h3>Welcome!</h3>
+<%= render 'shared/title_format', title: 'All Posts' %>
 
-<p>This is the Postit template. You've access the PostsController, index action. This is the index 
-template. Find me under app/views/posts folder.</p>
-
-
-<% @posts.each do |post| %>
+<% @posts.order(created_at: :desc).each do |post| %>
 
 <div class='well span8'>
 
 
-<% post.categories.each do |category| %>
+<% post.categories.order(:name).each do |category| %>
  <%= link_to category.name, category_path(category), class: 'badge' %>
  <% end %>
 
   <h3><%= link_to post.title, post %></h3>
   <p><%= truncate(post.description, length: 50) %>
   </p>
+
+  <p class='pull-right'><%= pluralize( post.comments.count, 'comment') %></p>
 </div>
 <% end %>
