--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,40 @@
 <%= render 'shared/title_format', title: 'All Posts' %>
 
-<% @posts.order(created_at: :desc).each do |post| %>
-
-<div class='well span8'>
+<% @posts.each do |post| %>
 
 
-<% post.categories.order(:name).each do |category| %>
- <%= link_to category.name, category_path(category), class: 'badge' %>
- <% end %>
+<div class= 'row'>
 
-  <h3><%= link_to post.title, post %></h3>
-  <p><%= truncate(post.description, length: 50) %>
-  </p>
+  <div class = 'span0 well text-center'>
+    <%= link_to vote_post_path(post, vote: true), method: 'post'  do %>
+      <i class='icon-arrow-up'></i>
+     <% end %>
+  <br />
+ <%= post.total_votes %>
+  <br />
+   <%= link_to vote_post_path(post, vote: false), method: 'post'  do %>
+      <i class='icon-arrow-down'></i>
+     <% end %>
+  </div>
 
-  <p class='pull-right'><%= pluralize( post.comments.count, 'comment') %></p>
+
+  <div class='well span8'>
+
+  <% post.categories.order(:name).each do |category| %>
+   <%= link_to category.name, category_path(category), class: 'badge' %>
+   <% end %>
+
+    <h3><%= link_to post.title, post %>  </h3>
+
+    <p><%= truncate(post.description, length: 50) %>
+    </p>
+  <span><%= link_to post.url, fix_url('/www.apple.com') %> </span>
+  <p>
+
+   <span > <%= who_and_when(post)  %> </span>
+   <span class='pull-right'><%= pluralize( post.comments.count, 'comment') %>  </span>
+     </p>
+   
+   </div>    
 </div>
 <% end %>
