--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -47,11 +47,29 @@
       <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu">
-    <li><%= link_to "Log out", logout_path%></li>
-    <li><%= link_to 'Edit profile', edit_user_path(current_user) %></li>
-    <li>Something else here</li>
+    <li>  
+      <%= link_to user_path(current_user) do %> 
+        <i class="icon-user"></i>
+        View Profile
+      <% end %>
+        
+      </li>
+    <li>  
+      <%= link_to edit_user_path(current_user) do %> 
+        <i class="icon-pencil"></i>
+        Edit profile
+      <% end %>
+
+      </li>
+  
     <li class="divider"></li>
-    <li>Separated link</li>
+    <li>  
+      <%= link_to logout_path do %> 
+        <i class="icon-remove"></i>
+        Log out
+      <% end %>
+        
+      </li>
   </ul>
 </div>
     </div>
